--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chessground",
   "version": "7.9.3",
-  "description": "lichess.org chess ui",
+  "description": "chess ui",
   "type": "commonjs",
   "main": "chessground.js",
   "typings": "chessground.d.ts",
@@ -34,18 +34,16 @@
     "/src/*.ts",
     "!/rollup.config.js"
   ],
-  "repository": "https://github.com/ornicar/chessground",
+  "repository": "https://github.com/hbpatel142/chessground",
   "keywords": [
     "chess",
-    "lichess",
-    "lichess.org",
     "chessboard",
     "ui",
     "typescript"
   ],
-  "author": "Thibault Duplessis (https://github.com/ornicar)",
+  "author": "Hardik Patel(https://github.com/hbpatel142)",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/ornicar/chessground/issues"
+    "url": "https://github.com/hbpatel142/chessground/issues"
   }
 }
